--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /2522-202210-Term-Project-XXX.iml
 /target/
 /logs/
+/src/main/java/ca/bcit/comp2522/termproject/_2522202210termprojectstarwars/test.java
+/system/fxgl.bundle
+/system/Readme.txt
